--- a/automation/heating-on-demand.yaml
+++ b/automation/heating-on-demand.yaml
@@ -130,11 +130,11 @@
 #    - platform: state
 #      entity_id: climate.bedroom_mark_south_mode
 #    - platform: state
-#      entity_id: climate.kitchen_mode
+#      entity_id: climate.kitchen_west_mode
 #    - platform: state
 #      entity_id: climate.ballroom_east_mode
 #    - platform: state
-#      entity_id: climate.library_mode
+#      entity_id: climate.library_east_mode
 #    - platform: state
 #      entity_id: climate.hall_west_mode
 #    - platform: state
@@ -142,9 +142,9 @@
 #    - platform: state
 #      entity_id: climate.annex_hall_mode
 #    - platform: state
-#      entity_id: climate.bedroom_annex2_mode
+#      entity_id: climate.bedroom_annex2_west_mode
 #    - platform: state
-#      entity_id: climate.guest_room_mode
+#      entity_id: climate.guest_room_north_mode
 #  action:
 #    #- service: climate.set_temperature
 #    #  data_template:
