--- a/groups.yaml
+++ b/groups.yaml
@@ -195,29 +195,29 @@ thermostat_devices:
   - climate.hall_west_mode
   - climate.main_heating_thermostat_heating_1
   - climate.annex_heating_thermostat_heating_1
-  - climate.kitchen_mode
-  - climate.library_mode
+  - climate.kitchen_west_mode
+  - climate.library_east_mode
   - climate.lounge_east_mode
   - climate.study_east_mode
   - climate.study_west_mode
-  - climate.guest_room_mode
+  - climate.guest_room_north_mode
   - climate.danfoss_z_thermostat_014g0013_heating_1
-  - climate.bedroom_annex2_mode
-  - climate.bedroom_main2_mode
-  - climate.bedroom_main3_mode
+  - climate.bedroom_annex2_west_mode
+  - climate.bedroom_main2_east_mode
+  - climate.bedroom_main3_east_mode
 
 # Front-end thermostats
 thermostats:
   name: Thermostats
   entities:
   - climate.annex_hall_thermostat
-  - climate.ballroom_east_thermostat
+  - climate.ballroom_east_mode
   - climate.bedroom_mark_thermostat
-  - climate.hall_east_thermostat
-  - climate.hall_west_thermostat
+  - climate.hall_east_mode
+  - climate.hall_west_mode
   - climate.kitchen_thermostat
   - climate.library_thermostat
-  - climate.lounge_east_thermostat
+  - climate.lounge_east_mode
   - climate.study_thermostat
   - climate.guest_room_thermostat
   - climate.bedroom_jerome_thermostat
