ozw: Rename _temperature to _air_temperature

--- a/automation/heating-on-demand.yaml
+++ b/automation/heating-on-demand.yaml
@@ -140,7 +140,7 @@
 #    - platform: state
 #      entity_id: climate.hall_east_mode
 #    - platform: state
-#      entity_id: climate.annex_hall_mode
+#      entity_id: climate.annex_hall_west_mode
 #    - platform: state
 #      entity_id: climate.bedroom_annex2_west_mode
 #    - platform: state
