--- a/packages/kitchen/heating-on-demand.yaml
+++ b/packages/kitchen/heating-on-demand.yaml
@@ -18,7 +18,7 @@ group:
     entities:
       - sensor.kitchen_mean_temperature
       - sensor.kitchen_current_temperature
-      - sensor.kitchen_temperature
+      - sensor.kitchen_west_air_temperature
 
   # Non-UI group which forwards setpoint updates
   #  Name is mapped from climate.foo_thermostat -> group.g_foo_thermostat
@@ -46,7 +46,7 @@ switch:
 sensor:
   - name: kitchen_current_temperature
     platform: mqtt
-    state_topic: 'ha/raw/sensor.kitchen_temperature/state'
+    state_topic: 'ha/raw/sensor.kitchen_west_air_temperature/state'
     ## dev: for mock mqtt devices
     #value_template: '{{ value_json.temperature }}'
     unit_of_measurement: "\xB0C"
@@ -70,7 +70,7 @@ automation:
   - alias: "kitchen_update_temperature"
     trigger:
       - platform: state
-        entity_id: sensor.kitchen_temperature
+        entity_id: sensor.kitchen_west_air_temperature
     action:
       - service: mqtt.publish
         data_template:
