--- a/packages/study/heating-on-demand.yaml
+++ b/packages/study/heating-on-demand.yaml
@@ -20,8 +20,8 @@ group:
       - sensor.study_temperature
       - sensor.study_east_current_temperature
       - sensor.study_west_current_temperature
-      - sensor.study_east_temperature
-      - sensor.study_west_temperature
+      - sensor.study_east_air_temperature
+      - sensor.study_west_air_temperature
 
   # Non-UI group which forwards setpoint updates
   #  Name is mapped from climate.foo_thermostat -> group.g_foo_thermostat
@@ -50,7 +50,7 @@ switch:
 sensor:
   - name: study_east_current_temperature
     platform: mqtt
-    state_topic: 'ha/raw/sensor.study_east_temperature/state'
+    state_topic: 'ha/raw/sensor.study_east_air_temperature/state'
     ## dev: for mock mqtt devices
     #value_template: '{{ value_json.temperature }}'
     unit_of_measurement: "\xB0C"
@@ -59,7 +59,7 @@ sensor:
 
   - name: study_west_current_temperature
     platform: mqtt
-    state_topic: 'ha/raw/sensor.study_west_temperature/state'
+    state_topic: 'ha/raw/sensor.study_west_air_temperature/state'
     ## dev: for mock mqtt devices
     #value_template: '{{ value_json.temperature }}'
     unit_of_measurement: "\xB0C"
@@ -84,9 +84,9 @@ automation:
   - alias: "study_update_temperature"
     trigger:
       - platform: state
-        entity_id: sensor.study_east_temperature
+        entity_id: sensor.study_east_air_temperature
       - platform: state
-        entity_id: sensor.study_west_temperature
+        entity_id: sensor.study_west_air_temperature
     action:
       - service: mqtt.publish
         data_template:
