--- a/groups.yaml
+++ b/groups.yaml
@@ -171,23 +171,25 @@ temperatures:
   - sensor.main_heating_thermostat_temperature
   - sensor.annex_heating_thermostat_temperature
   - sensor.aeotec_dsb05_multisensor_temperature
-  - sensor.ballroom_east_temperature
-  - sensor.hall_west_temperature
-  - sensor.hall_east_temperature
-  - sensor.annex_hall_temperature
-  - sensor.kitchen_current_temperature
-  - sensor.library_temperature
-  - sensor.lounge_east_current_temperature
-  - sensor.bedroom_mark_south_current_temperature
-  - sensor.bedroom_mark_north_current_temperature
-  - sensor.study_east_current_temperature
-  - sensor.study_west_current_temperature
-  - sensor.bedroom_annex2_current_temperature
+  - sensor.ballroom_east_air_temperature
+  - sensor.hall_west_air_temperature
+  - sensor.hall_east_air_temperature
+  - sensor.annex_hall_west_air_temperature
+  - sensor.kitchen_west_air_temperature
+  - sensor.library_east_air_temperature
+  - sensor.lounge_east_air_temperature
+  - sensor.bedroom_mark_south_air_temperature
+  - sensor.bedroom_mark_north_air_temperature
+  - sensor.bedroom_main2_east_air_temperature
+  - sensor.bedroom_main3_east_air_temperature
+  - sensor.study_east_air_temperature
+  - sensor.study_west_air_temperature
+  - sensor.bedroom_annex2_air_temperature
 
 thermostat_devices:
   name: Thermostat Devices
   entities:
-  - climate.annex_hall_mode
+  - climate.annex_hall_west_mode
   - climate.ballroom_east_mode
   - climate.bedroom_mark_south_mode
   - climate.bedroom_mark_north_mode
