--- a/packages/lounge/room.yaml
+++ b/packages/lounge/room.yaml
@@ -7,7 +7,7 @@ homeassistant:
     group.lounge_lights:
       icon: mdi:lightbulb-on
 
-    sensor.lounge_east_temperature:
+    sensor.lounge_east_air_temperature:
       friendly_name: Lounge East
     sensor.lounge_east_battery:
       friendly_name: Lounge East Battery
