--- a/people/anne.yaml
+++ b/people/anne.yaml
@@ -12,14 +12,15 @@ group:
   anne_present:
     name: "Anne"
     entities: &presence_entities
-      - device_tracker.anne_phone
       - device_tracker.anne_iphone5
       - device_tracker.anne_iphone4
       - device_tracker.anne_iphone4_bt
-      - device_tracker.anne_laptop
+      - device_tracker.anne_laptop_wired
+      - device_tracker.anne_laptop_wifi
       - device_tracker.anne_laptop_bt
-        #- device_tracker.anniehp
-        #- device_tracker.anne_ipad
+      - device_tracker.anniehp
+      - device_tracker.anne_ipad
+      - device_tracker.anne_ipad2
 
 binary_sensor:
   - name: anne_present
@@ -28,35 +29,41 @@ binary_sensor:
     prior: 0.66
     probability_threshold: 0.90
     observations:
-      # Owntracks
-      - entity_id: device_tracker.anne_phone
-        prob_given_true: 0.4
-        prob_given_false: 0.2
+      - entity_id: device_tracker.anne_iphone5
+        prob_given_true: 0.8
+        prob_given_false: 0.1
         <<: &tracker_default
           platform: 'state'
           to_state: 'home'
 
-      - entity_id: device_tracker.anne_iphone5
-        prob_given_true: 0.8
-        prob_given_false: 0.1
-        <<: *tracker_default
-
       - entity_id: device_tracker.anne_iphone4
-        prob_given_true: 0.8
-        prob_given_false: 0.1
-        <<: *tracker_default
+        <<: &obsolete_default
+          prob_given_true: 0.2
+          prob_given_false: 0.05
+          <<: *tracker_default
 
       - entity_id: device_tracker.anne_iphone4_bt
-        prob_given_true: 0.3
-        prob_given_false: 0.05
-        <<: *tracker_default
+        <<: *obsolete_default
 
-      - entity_id: device_tracker.anne_laptop
-        prob_given_true: 0.6
-        prob_given_false: 0.2
-        <<: *tracker_default
+      - entity_id: device_tracker.anne_laptop_wired
+        <<: &laptop_default
+          prob_given_true: 0.6
+          prob_given_false: 0.2
+          <<: *tracker_default
+
+      - entity_id: device_tracker.anne_laptop_wifi
+        <<: *laptop_default
 
       - entity_id: device_tracker.anne_laptop_bt
         prob_given_true: 0.3
         prob_given_false: 0.2
         <<: *tracker_default
+
+      - entity_id: device_tracker.anniehp
+        <<: *laptop_default
+
+      - entity_id: device_tracker.anne_ipad
+        <<: *obsolete_default
+
+      - entity_id: device_tracker.anne_ipad2
+        <<: *laptop_default
