--- a/ui-lovelace.yaml
+++ b/ui-lovelace.yaml
@@ -190,7 +190,7 @@ views:
         entities:
           - input_select.study_mode
           - entity: binary_sensor.study_door_contact_access_control_door_window_open
-            name: "Study Door Open"
+            name: "Study Door"
           - group.g_study_settings_ui
 
       - name: "Study Heat"
@@ -213,7 +213,7 @@ views:
           - input_select.kitchen_mode
           - binary_sensor.washing_machine
           - entity: binary_sensor.gin_fridge_contact_access_control_door_window_open
-            name: "Gin Freezer Open"
+            name: "Gin Freezer"
           - group.g_kitchen_settings_ui
 
       - name: "Kitchen Heat"
@@ -241,7 +241,7 @@ views:
           - climate.hall_thermostat
           - climate.annex_hall_thermostat
           - entity: binary_sensor.front_door_contact_access_control_door_window_open
-            name: "Front Door Open"
+            name: "Front Door"
       - type: entities
         title: Main Heating
         entities:
