--- a/groups.yaml
+++ b/groups.yaml
@@ -123,22 +123,22 @@ user_automations:
 batteries:
   name: Battery Levels
   entities:
-  - sensor.main_heating_thermostat_battery
-  - sensor.annex_heating_thermostat_battery
-  - sensor.hall_multisensor_battery
-  - sensor.hall_west_battery
-  - sensor.hall_east_battery
-  - sensor.study_east_battery
-  - sensor.study_west_battery
-  - sensor.library_battery
-  - sensor.bedroom_mark_south_battery
-  - sensor.bedroom_mark_north_battery
-  - sensor.lounge_east_battery
-  - sensor.ballroom_east_battery
-  - sensor.kitchen_battery
-  - sensor.annex_hall_battery
-  - sensor.bedroom_annex2_battery
-  - sensor.guest_room_battery
+  - sensor.main_heating_thermostat_battery_level
+  - sensor.annex_heating_thermostat_battery_level
+  - sensor.hall_multisensor_battery_level
+  - sensor.hall_west_battery_level
+  - sensor.hall_east_battery_level
+  - sensor.study_east_battery_level
+  - sensor.study_west_battery_level
+  - sensor.library_battery_level
+  - sensor.bedroom_mark_south_battery_level
+  - sensor.bedroom_mark_north_battery_level
+  - sensor.lounge_east_battery_level
+  - sensor.ballroom_east_battery_level
+  - sensor.kitchen_battery_level
+  - sensor.annex_hall_battery_level
+  - sensor.bedroom_annex2_battery_level
+  - sensor.guest_room_battery_level
 
 dash_buttons:
   name: Amazon Dash Buttons
