--- a/packages/ballroom/room.yaml
+++ b/packages/ballroom/room.yaml
@@ -6,7 +6,7 @@ homeassistant:
   customize:
     sensor.ballroom_east_air_temperature:
       friendly_name: Ballroom East
-    sensor.ballroom_east_battery:
+    sensor.ballroom_east_battery_level:
       friendly_name: Ballroom East Battery
       icon: mdi:battery
 
