--- a/packages/bedroom-main3/room.yaml
+++ b/packages/bedroom-main3/room.yaml
@@ -4,7 +4,7 @@
 
 homeassistant:
   customize:
-    sensor.bedroom_main3_battery:
+    sensor.bedroom_main3_battery_level:
       icon: mdi:battery
     climate.bedroom_main3_east_mode:
       min_temp: 8
