--- a/packages/kitchen/room.yaml
+++ b/packages/kitchen/room.yaml
@@ -10,7 +10,7 @@ homeassistant:
 
     sensor.kitchen_west_air_temperature:
       friendly_name: Kitchen
-    sensor.kitchen_battery:
+    sensor.kitchen_battery_level:
       friendly_name: Kitchen Battery
       icon: mdi:battery
 
