history: include all sensors

--- a/history.yaml
+++ b/history.yaml
@@ -12,46 +12,4 @@ include:
   domains:
     - ups
     - switch
-  entities:
-    - sensor.main_heating_thermostat_air_temperature
-    - sensor.annex_heating_thermostat_air_temperature
-    - sensor.aeotec_dsb05_multisensor_temperature
-    - sensor.ballroom_east_air_temperature
-    - sensor.hall_west_air_temperature
-    - sensor.hall_east_air_temperature
-    - sensor.annex_hall_west_air_temperature
-    - sensor.kitchen_west_air_temperature
-    - sensor.library_east_air_temperature
-    - sensor.lounge_east_air_temperature
-    - sensor.bedroom_mark_south_air_temperature
-    - sensor.bedroom_mark_north_air_temperature
-    - sensor.study_east_air_temperature
-    - sensor.study_west_air_temperature
-    - sensor.bedroom_annex2_temperature
-    - sensor.main_heating_thermostat_battery_level
-    - sensor.annex_heating_thermostat_battery_level
-    - sensor.hall_multisensor_battery_level
-    - sensor.hall_west_battery_level
-    - sensor.study_east_battery_level
-    - sensor.study_west_battery_level
-    - sensor.hall_east_battery_level
-    - sensor.library_battery_level
-    - sensor.bedroom_mark_south_battery_level
-    - sensor.bedroom_mark_north_battery_level
-    - sensor.lounge_east_battery_level
-    - sensor.ballroom_east_battery_level
-    - sensor.kitchen_battery_level
-    - sensor.annex_hall_battery_level
-    - sensor.bedroom_annex2_battery_level
-    - sensor.guest_room_battery_level
-    - sensor.aeotec_dsb05_multisensor_luminance
-    - sensor.aeotec_dsb05_multisensor_relative_humidity
-    - sensor.hottub_powernode_electric_kwh
-    - sensor.hottub_powernode_electric_w
-    - sensor.cm2_temp_c
-    - sensor.cm2_humidity
-    - sensor.cm2_light
-    - sensor.cm2_airflow
-    - sensor.cm2_sound
-    - sensor.cm2_dew_point_c
-
+    - sensor
