--- a/packages/ballroom/room.yaml
+++ b/packages/ballroom/room.yaml
@@ -86,7 +86,7 @@ switch:
 media_player:
   - name: ballroom
     platform: kodi
-    host: ballroom
+    host: ballroom.home.whalebarn.com
     port: 80
 
   - name: Ballroom Amplifier
