--- a/packages/lounge/room.yaml
+++ b/packages/lounge/room.yaml
@@ -73,7 +73,7 @@ switch:
 media_player:
   - name: lounge
     platform: kodi
-    host: lounge
+    host: lounge.home.whalebarn.com
     port: 80
 
 #script: !include_dir_merge_named scripts
