--- a/packages/study/room.yaml
+++ b/packages/study/room.yaml
@@ -84,7 +84,7 @@ switch:
 media_player:
   - name: study
     platform: kodi
-    host: study
+    host: study.home.whalebarn.com
     port: 80
 
 #automation: !include_dir_merge_list automations
