http: update reverse proxy for X-Forwarded-For

--- a/configuration.yaml
+++ b/configuration.yaml
@@ -154,7 +154,8 @@ map:
 sun:
 
 http:
-#  base_url: !secret base_url
+  use_x_forwarded_for: true
+  trusted_proxies: 127.0.0.1
 
 mqtt:
   broker: !secret mqtt_broker
