Replace mdi:settings with mdi:cog
For Settings view, use mdi:hazard-lights

--- a/groups.yaml
+++ b/groups.yaml
@@ -28,7 +28,7 @@ rfx_lights:
 
 settings:
   name: Settings
-  icon: mdi:settings
+  icon: mdi:cog
   entities:
   - group.temperatures
   - group.thermostats
