--- a/packages/bedroom-mark/settings.yaml
+++ b/packages/bedroom-mark/settings.yaml
@@ -1,7 +1,7 @@
 group:
   g_bedroom_mark_settings_ui:
     name: Settings
-    icon: mdi:settings
+    icon: mdi:cog
     entities:
       - input_number.bedroom_mark_temperature_off
       - input_number.bedroom_mark_temperature_play
