--- a/packages/ballroom/settings.yaml
+++ b/packages/ballroom/settings.yaml
@@ -1,7 +1,7 @@
 group:
   g_ballroom_settings_ui:
     name: Settings
-    icon: mdi:settings
+    icon: mdi:cog
     entities:
       - input_number.ballroom_temperature_off
       - input_number.ballroom_temperature_party
