--- a/packages/bedroom-annex2/settings.yaml
+++ b/packages/bedroom-annex2/settings.yaml
@@ -1,7 +1,7 @@
 group:
   g_bedroom_annex2_settings_ui:
     name: Settings
-    icon: mdi:settings
+    icon: mdi:cog
     entities:
       - input_number.bedroom_annex2_temperature_off
       - input_number.bedroom_annex2_temperature_cosy
