--- a/packages/kitchen/settings.yaml
+++ b/packages/kitchen/settings.yaml
@@ -1,7 +1,7 @@
 group:
   g_kitchen_settings_ui:
     name: Settings
-    icon: mdi:settings
+    icon: mdi:cog
     entities:
       - input_number.kitchen_temperature_off
       - input_number.kitchen_temperature_cosy
