--- a/packages/lounge/settings.yaml
+++ b/packages/lounge/settings.yaml
@@ -1,7 +1,7 @@
 group:
   g_lounge_settings_ui:
     name: Settings
-    icon: mdi:settings
+    icon: mdi:cog
     entities:
       - input_number.lounge_temperature_off
       - input_number.lounge_temperature_cosy
